--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,11 +1,11 @@
 set(BLEAPER_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/BLEAPER.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/MidiDeviceWatcher.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/MidiDeviceService.cpp
 )
 
 set(BLEAPER_HEADERS
     ${CMAKE_CURRENT_SOURCE_DIR}/BLEAPER.h
-    ${CMAKE_CURRENT_SOURCE_DIR}/MidiDeviceWatcher.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/MidiDeviceService.h
 )
 
 set(BLEAPER_LIBS
