--- a/.github/workflows/BLEAPER.yml
+++ b/.github/workflows/BLEAPER.yml
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@v2
     - uses: microsoft/setup-msbuild@v1
     - name: Restore Dependencies
-      run: BLEAPER.sln /t:restore
+      run: msbuild BLEAPER.sln /t:restore
     - name: Build x64
       run: msbuild BLEAPER.sln /t:Rebuild /p:Configuration=Debug /p:Platform=x64
     - name: Build x86
