--- a/.github/workflows/BLEAPER.yml
+++ b/.github/workflows/BLEAPER.yml
@@ -27,4 +27,4 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: build
-          path: output_*.*
+          path: output_*/*
